--- a/src/main/resources/glass/velocity/new_job_form.vm
+++ b/src/main/resources/glass/velocity/new_job_form.vm
@@ -41,7 +41,7 @@
                              #if(${status.error}) ${status.errorMessage} #end
                         </td>
                     </tr>
-                    #if ($utils.notEmpty($jobDescription))
+                    #if ($utils.isNotEmpty($jobDescription))
                         <tr>
                             <td>description</td>
                             <td>$esc.html($jobDescription)</td>
