remove velocity tools

--- a/src/main/resources/org/glass/velocity/dashboard.vm
+++ b/src/main/resources/org/glass/velocity/dashboard.vm
@@ -25,10 +25,10 @@
                             <tr>
                                 <td>${trigger.jobGroup} / ${trigger.jobName}</td>
                                 <td>${trigger.group} / ${trigger.name}</td>
-                                <td>$date.format("dd/MM/yyyy HH:mm:ss", $trigger.previousFireTime)</td>
-                                <td>$date.format("dd/MM/yyyy HH:mm:ss", $trigger.nextFireTime)</td>
+                                <td>$format.date($trigger.previousFireTime)</td>
+                                <td>$format.date($trigger.nextFireTime)</td>
                                 <td nowrap="nowrap">
-                                    <a onclick="javascript:return(confirm('Are you sure you want to restart trigger ?'));" href="/restartTrigger?group=$esc.xml($trigger.group)&amp;name=$esc.xml($trigger.name)">
+                                    <a onclick="javascript:return(confirm('Are you sure you want to restart trigger ?'));" href="/restartTrigger?group=$format.html($trigger.group)&amp;name=$format.html($trigger.name)">
                                         <img alt="restart" src="/image/restart.png" />
                                     </a>
                                 </td>
@@ -57,14 +57,14 @@
                     <tbody>
                         #foreach ($jobContext in $runningJobs)
                             <tr>
-                                <td><a href="/jobs/$esc.xml($jobContext.jobDetail.group)/$esc.xml($jobContext.jobDetail.name)">${jobContext.jobDetail.group} / ${jobContext.jobDetail.name}</a></td>
+                                <td><a href="/jobs/$format.html($jobContext.jobDetail.group)/$format.html($jobContext.jobDetail.name)">${jobContext.jobDetail.group} / ${jobContext.jobDetail.name}</a></td>
                                 <td>${jobContext.jobDetail.jobClass}</td>
-                                <td style="text-align: center">$date.format("dd/MM/yyyy HH:mm:ss", $jobContext.fireTime)</td>
+                                <td style="text-align: center">$format.date($jobContext.fireTime)</td>
                                 #set ($duration = (($now.time - $jobContext.fireTime.time) / 1000))
                                 <td style="text-align: center">$duration seconds</td>
                                 <td style="text-align: center">
                                     #if ($utils.isInterruptible($jobContext.jobDetail))
-                                       <a href="/interrupt?group=$esc.xml($jobContext.jobDetail.group)&amp;name=$esc.xml($jobContext.jobDetail.name)">
+                                       <a href="/interrupt?group=$format.html($jobContext.jobDetail.group)&amp;name=$format.html($jobContext.jobDetail.name)">
                                            <img src="/image/stop.png" alt="stop" >
                                        </a>
                                     #end
@@ -98,7 +98,7 @@
                                 <td>${trigger.jobName}</td>
                                 <td>${trigger.group}</td>
                                 <td>${trigger.name}</td>
-                                <td>$date.format("dd/MM/yyyy HH:mm:ss", $trigger.nextFireTime)</td>
+                                <td>$format.date($trigger.nextFireTime)</td>
                             </tr>
                         #end
                     </tbody>
