--- a/src/main/resources/org/glass/velocity/job.vm
+++ b/src/main/resources/org/glass/velocity/job.vm
@@ -9,34 +9,34 @@
 		
 		<h1><span>Job</span></h1>
         <div class="actions">
-            <a href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/edit">edit</a>
-            <a href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/fire">fire now</a>
+            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/edit">edit</a>
+            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/fire">fire now</a>
             <a href="/history?job=${job.jobClass.simpleName}">history</a>
-            <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/delete">delete</a>
+            <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$format.html($job.group)/$format.html($job.name)/delete">delete</a>
         </div>
         <div class="table">
             <table>
                 <tbody>
                     <tr>
                         <td>Group</td>
-                        <td>$esc.html($job.group)</td>
+                        <td>$format.html($job.group)</td>
                     </tr>
                     <tr>
                         <td>Name</td>
-                        <td>$esc.html($job.name)</td>
+                        <td>$format.html($job.name)</td>
                     </tr>
                     <tr>
                         <td>Class</td>
-                        <td>$esc.html($job.jobClass.name)</td>
+                        <td>$format.html($job.jobClass.name)</td>
                     </tr>
                     <tr>
                         <td>Description</td>
-                        <td>$esc.html($jobDescription)</td>
+                        <td>$format.html($jobDescription)</td>
                     </tr>
                     <tr>
                         <td>Data map</td>
                         <td>
-                            <pre>$esc.html($dataMap)</pre>
+                            <pre>$format.html($dataMap)</pre>
                         </td>
                     </tr>
                 </tbody>
@@ -47,8 +47,8 @@
 
 		<h2><span>Defined triggers</span></h2>
         <div class="actions">
-            <a href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/triggers/new-cron">add cron</a>
-            <a href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/triggers/new-simple">add simple</a>
+            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/new-cron">add cron</a>
+            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/new-simple">add simple</a>
         </div>
         <div class="table">
             <table>
@@ -67,18 +67,18 @@
                 <tbody>
                     #foreach ($trigger in $triggers)
                         <tr>
-                            <td style="text-align: center;">$esc.html($trigger.type)</td>
-                            <td><a href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/triggers/$esc.xml($trigger.group)/$esc.xml($trigger.name)/edit">$esc.html($trigger.group) / $esc.html($trigger.name)</a></td>
+                            <td style="text-align: center;">$format.html($trigger.type)</td>
+                            <td><a href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/edit">$format.html($trigger.group) / $format.html($trigger.name)</a></td>
                             <td style="text-align: center;">
-                                $date.format("dd/MM/yyyy HH:mm:ss", $trigger.startTime)
+                                $format.date($trigger.startTime)
                                 #if ($trigger.running) &nbsp;<span style="color: red;">running</span> #end
                             </td>
-                            <td style="text-align: center;">$!date.format("dd/MM/yyyy HH:mm:ss", $trigger.endTime)</td>
-                            <td style="text-align: center;">$!date.format("dd/MM/yyyy HH:mm:ss", $trigger.previousFireTime)</td>
-                            <td style="text-align: center;">$!date.format("dd/MM/yyyy HH:mm:ss", $trigger.nextFireTime)</td>
+                            <td style="text-align: center;">$format.date($trigger.endTime)</td>
+                            <td style="text-align: center;">$format.date($trigger.previousFireTime)</td>
+                            <td style="text-align: center;">$format.date($trigger.nextFireTime)</td>
                             <td style="text-align: center;">${trigger.planification}</td>
                             <td style="text-align: center;">
-                                <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$esc.xml($job.group)/$esc.xml($job.name)/triggers/$esc.xml($trigger.group)/$esc.xml($trigger.name)/delete">
+                                <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/delete">
                                     <img alt="delete" src="/image/delete.png" />
                                 </a>
                             </td>
