--- a/src/main/resources/org/glass/velocity/cron_trigger_form.vm
+++ b/src/main/resources/org/glass/velocity/cron_trigger_form.vm
@@ -9,29 +9,29 @@
 
         <h1><span>Edit cron trigger</span></h1>
         <div class="table">
-            <form action="/jobs/$esc.xml($group)/$esc.xml($name)/triggers/$esc.xml($triggerGroup)/$esc.xml($triggerName)/edit-cron" method="POST" >
+            <form action="/jobs/$format.html($group)/$format.html($name)/triggers/$format.html($triggerGroup)/$format.html($triggerName)/edit-cron" method="POST" >
                 <table>
                     <tr>
                         <td>job group :</td>
-                        <td>$esc.html($trigger.jobKey.group)</td>
+                        <td>$format.html($trigger.jobKey.group)</td>
                     </tr>
                     <tr>
                         <td>job name : </td>
-                        <td>$esc.html($trigger.jobKey.name)</td>
+                        <td>$format.html($trigger.jobKey.name)</td>
                     </tr>
                     <tr>
                         <td>group :</td>
-                        <td>$esc.html($trigger.key.group)</td>
+                        <td>$format.html($trigger.key.group)</td>
                     </tr>
                     <tr>
                         <td>name :</td>
-                        <td>$esc.html($trigger.key.name)</td>
+                        <td>$format.html($trigger.key.name)</td>
                     </tr>
                     #springBind("form.startTime")
                     <tr>
                         <td>start time (dd/MM/yyyy HH:mm:ss) :</td>
                         <td>
-                            <input type="text" name="startTime" value="$!esc.xml($status.value)" />
+                            <input type="text" name="startTime" value="$!format.html($status.value)" />
                             #if(${status.error}) ${status.errorMessage} #end
                         </td>
                     </tr>
@@ -39,7 +39,7 @@
                     <tr>
                         <td>end time (dd/MM/yyyy HH:mm:ss) :</td>
                         <td>
-                            <input type="text" name="endTime" value="$!esc.xml($status.value)" />
+                            <input type="text" name="endTime" value="$!format.html($status.value)" />
                             #if(${status.error}) ${status.errorMessage} #end
                         </td>
                     </tr>
@@ -47,7 +47,7 @@
                     <tr>
                         <td>cron expression :</td>
                         <td>
-                            <input type="text" name="cronExpression" value="$!esc.xml($status.value)" />
+                            <input type="text" name="cronExpression" value="$!format.html($status.value)" />
                             #if(${status.error}) ${status.errorMessage} #end
                             &nbsp;<a href="#cron-documentation">documentation</a>
                         </td>
@@ -55,7 +55,7 @@
                     #springBind("form.dataMap")
                     <tr>
                         <td>data map :</td>
-                        <td><textarea name="dataMap" rows="20" cols="100" >$!esc.html($status.value)</textarea></td>
+                        <td><textarea name="dataMap" rows="20" cols="100" >$!format.html($status.value)</textarea></td>
                     </tr>
                 </table>
                 <input type="submit" value="update cron trigger"/>
