--- a/src/main/resources/org/glass/velocity/history.vm
+++ b/src/main/resources/org/glass/velocity/history.vm
@@ -22,19 +22,19 @@
                 <tbody>
                     #foreach ($log in $logs)
                         <tr>
-                            <td>$esc.html($log.type)</td>
-                            <td>$date.format("dd/MM/yyyy HH:mm:ss", ${log.date})</td>
-                            <td><a href="/jobs/$esc.xml($log.jobGroup)/$esc.xml($log.jobName)">$esc.html($log.jobGroup) / $esc.html($log.jobName)</a></td>
-                            <td>$esc.html($log.triggerGroup) / $esc.html($log.triggerName)</td>
+                            <td>$format.html($log.type)</td>
+                            <td>$format.date(${log.date})</td>
+                            <td><a href="/jobs/$format.html($log.jobGroup)/$format.html($log.jobName)">$format.html($log.jobGroup) / $format.html($log.jobName)</a></td>
+                            <td>$format.html($log.triggerGroup) / $format.html($log.triggerName)</td>
                             <td>${log.jobClass}</td>
                         </tr>
                         <tr>
                             <td colspan="5">
                                 #if ($utils.isNotEmpty($log.stackTrace))
-                                    <pre>$!esc.html($log.stackTrace)</pre>
+                                    <pre>$!format.html($log.stackTrace)</pre>
                                 #end
                                 #if ($utils.isNotEmpty($log.stackTrace))
-                                    <pre>$esc.html($log.stackTrace)</pre>
+                                    <pre>$format.html($log.stackTrace)</pre>
                                 #end
                             </td>
                         </tr>
