--- a/src/main/resources/org/glass/velocity/job_form.vm
+++ b/src/main/resources/org/glass/velocity/job_form.vm
@@ -10,30 +10,30 @@
 		<h1><span>Edit job</span></h1>
 
         <div class="table">
-            <form id="jobActionForm" action="/jobs/$esc.xml($group)/$esc.xml($name)/edit" method="POST" >
+            <form id="jobActionForm" action="/jobs/$format.html($group)/$format.html($name)/edit" method="POST" >
                 <table>
                     <tr>
                         <td>jobClass</td>
-                        <td>$esc.html($jobClass.name)</td>
+                        <td>$format.html($jobClass.name)</td>
                     </tr>
                     #if ($utils.isNotEmpty($jobDescription))
                         <tr>
                             <td>description</td>
-                            <td>$esc.html($jobDescription)</td>
+                            <td>$format.html($jobDescription)</td>
                         </tr>
                     #end
                     <tr>
                         <td>group</td>
-                        <td>$esc.html($group)</td>
+                        <td>$format.html($group)</td>
                     </tr>
                     <tr>
                         <td>name</td>
-                        <td>$esc.html($name)</td>
+                        <td>$format.html($name)</td>
                     </tr>
                     #springBind("form.dataMap")
                     <tr>
                         <td valign="top">data map</td>
-                        <td><textarea name="dataMap" rows="20" cols="100" >$!esc.html($status.value)</textarea></td>
+                        <td><textarea name="dataMap" rows="20" cols="100" >$!format.html($status.value)</textarea></td>
                     </tr>
                 </table>
                 <input type="submit" value="update job"/>
