--- a/src/main/resources/org/glass/velocity/widgets/args.vm
+++ b/src/main/resources/org/glass/velocity/widgets/args.vm
@@ -18,7 +18,7 @@
                                 $format.html($argument.name)*
                             </span>
                         #else
-                            $format.html($argument.name)*
+                            $format.html($argument.name)
                         #end
                     </td>
                     <td>$format.html($argument.description)</td>
