--- a/src/main/resources/org/glass/velocity/dashboard.vm
+++ b/src/main/resources/org/glass/velocity/dashboard.vm
@@ -51,6 +51,7 @@
                             <th>Class</th>
                             <th>FireTime</th>
                             <th>Duration</th>
+                            <th>Planification</th>
                             <th>Stop</th>
                         </tr>
                     </thead>
@@ -60,8 +61,8 @@
                                 <td><a href="/jobs/$format.html($jobContext.jobDetail.group)/$format.html($jobContext.jobDetail.name)">${jobContext.jobDetail.group} / ${jobContext.jobDetail.name}</a></td>
                                 <td>${jobContext.jobDetail.jobClass}</td>
                                 <td style="text-align: center">$format.date($jobContext.fireTime)</td>
-                                #set ($duration = (($now.time - $jobContext.fireTime.time) / 1000))
-                                <td style="text-align: center">$duration seconds</td>
+                                <td style="text-align: center">$utils.duration($jobContext)</td>
+                                <td style="text-align: center">$utils.planification($jobContext.trigger)</td>
                                 <td style="text-align: center">
                                     #if ($utils.isInterruptible($jobContext.jobDetail))
                                        <a href="/interrupt?group=$format.html($jobContext.jobDetail.group)&amp;name=$format.html($jobContext.jobDetail.name)">
