--- a/src/main/resources/org/glass/velocity/cron_trigger_form.vm
+++ b/src/main/resources/org/glass/velocity/cron_trigger_form.vm
@@ -32,6 +32,7 @@
                         <td>start time (dd/MM/yyyy HH:mm:ss) :</td>
                         <td>
                             <input type="text" name="startTime" value="$!format.html($status.value)" />
+                            &nbsp;leave blank to start now
                             #if(${status.error}) ${status.errorMessage} #end
                         </td>
                     </tr>
