--- a/src/main/resources/org/glass/velocity/new_simple_trigger_form.vm
+++ b/src/main/resources/org/glass/velocity/new_simple_trigger_form.vm
@@ -37,7 +37,7 @@
                     </tr>
                     #springBind("form.startTime")
                     <tr>
-                        <td>start time (dd/MM/yyyy HH:mm:ss) :</td>
+                        <td>start time ($format.datePattern()) :</td>
                         <td>
                             <input type="text" name="startTime" value="$!format.html($status.value)" />
                             &nbsp;leave blank to start now
@@ -46,7 +46,7 @@
                     </tr>
                     #springBind("form.endTime")
                     <tr>
-                        <td>end time (dd/MM/yyyy HH:mm:ss) :</td>
+                        <td>end time ($format.datePattern()) :</td>
                         <td>
                             <input type="text" name="endTime" value="$!format.html($status.value)" />
                             #if(${status.error}) ${status.errorMessage} #end
